files are listed

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,4 +9,11 @@ html(lang="en")
     form.main-form(action="")
       input(type="text" name="folderName" placeholder="Enter Folder Name")
       input(type="submit" value="Fetch Files")
+    hr
+    section.files
+      
+
+
     script(src="index.js")
+
+      
